--- a/charts.html
+++ b/charts.html
@@ -332,8 +332,7 @@
       <div class="btn_1">
         <a
           class="btn btn-block btn-glow btn-upgrade-pro mx-1 btn_1"
-          href="https://themeselection.com/products/chameleon-admin-modern-bootstrap-webapp-dashboard-html-template-ui-kit/"
-          target="_blank"
+          href="login.html"
           >LogIn</a
         >
       </div>
