--- a/cards.html
+++ b/cards.html
@@ -329,11 +329,10 @@
           </li>
         </ul>
       </div>
-      <div class="btn_1">
+	  <div class="btn_1">
         <a
           class="btn btn-block btn-glow btn-upgrade-pro mx-1 btn_1"
-          href="https://themeselection.com/products/chameleon-admin-modern-bootstrap-webapp-dashboard-html-template-ui-kit/"
-          target="_blank"
+          href="login.html"
           >LogIn</a
         >
       </div>
